# inter-service-tracing-demo

./: LICENSE  docker-compose.yaml
api-1/: Dockerfile  pyproject.toml
api-1/src/: app.py  config.py  dependencies.py  trace.py  utils.py
api-2/: Dockerfile  pyproject.toml
api-2/src/: app.py  config.py  metrics.py
